# lib/db/src/schema/sales.ts
@@ -1,4 +1,4 @@
-import { pgTable, serial, text, timestamp, integer } from "drizzle-orm/pg-core";
+import { pgTable, serial, text, timestamp, integer, numeric } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
 
@@ -8,6 +8,7 @@ export const salesTable = pgTable("sales", {
   productName: text("product_name").notNull(),
   paymentMethod: text("payment_method").notNull(),
   quantity: integer("quantity").notNull().default(1),
+  totalValue: numeric("total_value", { precision: 10, scale: 2 }).notNull().default("0"),
   date: timestamp("date").notNull().defaultNow(),
 });
 
